[gd_scene load_steps=11 format=3 uid="uid://cwp0spuqeu7jj"]

[ext_resource type="PackedScene" uid="uid://bp8dysnl8lnrb" path="res://assets/models/SM_Env_PalmBush_03.fbx" id="1_jo5n8"]
[ext_resource type="Script" uid="uid://ciqlm3xrdw757" path="res://scripts/objectives/watering_bush.gd" id="2_r8aun"]
[ext_resource type="PackedScene" uid="uid://dsdldfkq75yyj" path="res://scenes/ui/water_bar.tscn" id="3_pmvla"]
[ext_resource type="Script" uid="uid://c1y6v6g8jqtca" path="res://scripts/look_at_camera.gd" id="4_cf3ao"]
[ext_resource type="AudioStream" uid="uid://dhinc3at78cb5" path="res://assets/audio/Water 1.wav" id="5_78vi6"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ghwf4"]
albedo_color = Color(0, 1, 0.133333, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_swfeb"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2c1dl"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_swfeb")

[sub_resource type="QuadMesh" id="QuadMesh_unt8k"]
size = Vector2(3, 0.5)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vdwn7"]

[node name="WateringBush" groups=["plant"] instance=ExtResource("1_jo5n8")]
script = ExtResource("2_r8aun")
max_water = 240.0
tooltip_text = "Hold to Water Plant"

[node name="SM_Env_PalmBush_03" parent="." index="0"]
transform = Transform3D(50, 0, 0, 0, 50, 0, 0, 0, 50, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_ghwf4")

[node name="SubViewport" type="SubViewport" parent="." index="2"]
size = Vector2i(1500, 250)

[node name="WaterBar" parent="SubViewport" index="0" instance=ExtResource("3_pmvla")]
offset_right = 0.0
offset_bottom = 0.0

[node name="CanvasHolder" type="Node3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.27353, 0)
script = ExtResource("4_cf3ao")

[node name="WorldSpaceCanvas" type="MeshInstance3D" parent="CanvasHolder" index="0"]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_2c1dl")
mesh = SubResource("QuadMesh_unt8k")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="." index="4" groups=["interactable"]]
collision_layer = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" index="0" groups=["interactable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02498, 0)
shape = SubResource("CylinderShape3D_vdwn7")

[node name="WateringSound" type="AudioStreamPlayer3D" parent="." index="5"]
stream = ExtResource("5_78vi6")

[node name="SpotLight3D2" type="SpotLight3D" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.0311234, 4.58743, -0.0420203)
light_energy = 6.0
shadow_enabled = true
spot_range = 10.0
spot_angle = 30.0

[node name="ScrapTimer" type="Timer" parent="." index="7"]
wait_time = 10.0
autostart = true
